Completed generate image endpoint, Added more test cases and missing content error, updated the test_routes, documentation and swagger to reflect the changes
